--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NJIT Gender Neutral Bathrooms</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,17 +17,14 @@
             height: 100vh;
         }
         #map {
-            height: 100vh;
             flex-grow: 1;
         }
         aside {
             background-color: white;
-            width: 20em;
             padding: 1em;
             font-family: "Roboto", sans-serif;
             display: flex;
             flex-direction: column;
-            height: 100%;
             box-sizing: border-box;
         }
         main {
@@ -66,6 +64,27 @@
         }
         li a:hover {
             background-color: #eeeeee;
+        }
+
+        @media (max-width: calc(50em - 1px)) {
+            body {
+                flex-direction: column;
+            }
+
+            aside {
+                height: 30em;
+            }
+
+            aside img {
+                width: 15em;
+            }
+        }
+
+        @media (min-width: 50em) {
+            aside {
+                width: 20em;
+                height: 100%;
+            }
         }
     </style>
 </head>
